Documentation and API updates (#20)
* Pin all versions

* Change rye for uv in pyproject

* Fix map color issue

* Fix uv dependencies, add pixi linting toolchain

* Update ci workflow

* Add pixi lock file

* Add uv lock file

* Add playwright CI install

* Lint all sources

* Update packages to latest compatible with tsbrowse

* Remove tsbrowse dependency, update holoviz versions

* Use tseda model in tests

* Set minimum map height to prevent collapsing plot

* Fix geomap sizing issues

Add min height to panel components to at least improve rendering
somewhat.

* Add docs to CI

* Run Quarto in pixi quarto environment

* Add docs

* Run quarto from pixi environment

* Add tseda kernel

* Run command in quarto environment

* Fix quarto publish path

* Publish docs

* Remove gh-pages argument

* Readd docs argument

* Add pixi development tasks

* Update manifest and use tseda tsdate files for testing

* Fix class selector error in development mode

Class selectors cannot be defined as parameters for datastore and some
of the View subclasses and have been refactored into regular python
function parameters.

* Arrange population_from and sample_set_to widgets in column

* Fix sizing mode for haplotype plots

* Remove daiquiri dependency and add custom logger

--- a/docs/notebook.qmd
+++ b/docs/notebook.qmd
@@ -6,6 +6,7 @@ author:
   - Per Unneberg
 execute:
   eval: true
+  cache: false
 jupyter:
   jupytext:
     formats: ipynb,qmd
@@ -169,7 +170,7 @@ struct
 
 ### Individual GNN
 
-The indivdual GNN page displays three widgets:
+The individual GNN page displays three widgets:
 
 1. a map with sampling locations
 2. a bar plot of individual-based GNN values, based on the current
